# fastapi-core

./: .gitignore  Makefile  README.md  a.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: NEXT_STEPS.md
fastapi_core/: app_settings.py  create_app.py  settings.py
fastapi_core/bucket_driver/: __init__.py  bucket_driver_abc.py  s3_bucket_driver.py
fastapi_core/cache_driver/: cache_driver_abc.py  in_memory_driver.py  redis_cache_driver.py
fastapi_core/database/: __init__.py  database.py
fastapi_core/middleware/: __init__.py  app_middleware.py  plugins.py
fastapi_core/model/: __init__.py  model_base.py  model_helpers.py  model_mixin.py
fastapi_core/orchestrators/: dependencies_orchestrator.py
fastapi_core/repository/: __init__.py  repository.py  repository_abc.py
fastapi_core/routes/cache/: cache_router.py
fastapi_core/routes/health/: health_router.py  health_schemas.py
fastapi_core/routes/migrations/: run_migrations_router.py  run_migrations_schemas.py
fastapi_core/service/: service.py
fastapi_core/talker/: __init__.py  talker.py  talker_abc.py
fastapi_core/utils/: __init__.py  app_dependencies_abc.py  csv_exporter.py  exceptions.py  render_description.py  singleton_meta.py
scripts/: lint.sh
tests/: test_example.py
tests/unit/database/: test_database.py
tests/unit/model/: test_model_mixin.py
tests/unit/repository/: hero_model.py  test_repository.py
tests/unit/repository/methods/: test_count.py  test_find_all.py  test_find_one.py  test_find_paginated.py
